all descriptors stateful

--- a/src/app/modules/dashboard/dashboard-index/dashboard-index.component.html
+++ b/src/app/modules/dashboard/dashboard-index/dashboard-index.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid no-scroll">
     <div class="row">
         <div class="col-1">
             <app-description-type-selector></app-description-type-selector>
