--- a/src/app/modules/descriptors/topics/topics.component.html
+++ b/src/app/modules/descriptors/topics/topics.component.html
@@ -1,1 +1,28 @@
-<p>topics works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div cdkDropListGroup>
+            <div class="example-container">
+                <cdk-virtual-scroll-viewport itemSize="50" class="viewport">
+                    <div
+                        cdkDropList
+                        [cdkDropListData]="topics"
+                        class="example-list"
+                        cdkDropListSortingDisabled
+                        (cdkDropListDropped)="drop($event)">
+                            <div class="example-box" *ngFor="let topic of topics" cdkDrag (cdkDragDropped)="setActive(topic)">{{topic.name}}</div>
+                    </div>
+                </cdk-virtual-scroll-viewport>
+            </div>
+            <div class="example-container">
+                <div
+                    cdkDropList
+                    [cdkDropListData]="activeTopics"
+                    class="example-list"
+                    (cdkDropListDropped)="drop($event)"
+                >
+                    <div class="example-box" *ngFor="let topic of activeTopics" cdkDrag (cdkDragDropped)="setInactive(topic)">{{topic.name}}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
