--- a/src/app/modules/descriptors/tones/tones.component.scss
+++ b/src/app/modules/descriptors/tones/tones.component.scss
@@ -7,17 +7,16 @@
   }
   
   .example-list {
-    border: solid 1px #ccc;
     min-height: 60px;
-    background: white;
+    background: #585858;
     border-radius: 4px;
     overflow: hidden;
     display: block;
+    color: #fff;
   }
   
   .example-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -25,8 +24,9 @@
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    background: #585858;
     font-size: 14px;
+    color: #fff;
   }
   
   .cdk-drag-preview {
