--- a/src/app/modules/prompt-preview/prompt-preview-text-area/prompt-preview-text-area.component.scss
+++ b/src/app/modules/prompt-preview/prompt-preview-text-area/prompt-preview-text-area.component.scss
@@ -5,3 +5,11 @@
 .prompt-text {
     width: 44vw;
 }
+
+::ng-deep .mat-form-field-appearance-fill .mat-input-element {
+  color: white;
+}
+
+::ng-deep .mat-checkbox {
+  color: white;
+}
