--- a/src/app/modules/voice-library/voice-library-index/voice-library-index.component.html
+++ b/src/app/modules/voice-library/voice-library-index/voice-library-index.component.html
@@ -4,7 +4,7 @@
             <app-descriptors-index></app-descriptors-index>
         </div>
         <div class="col">
-            <app-prompt-preview-index></app-prompt-preview-index>
+            <app-voice-prompts></app-voice-prompts>
         </div>
     </div>
 </div>
