--- a/src/app/modules/descriptors/personas/personas.component.scss
+++ b/src/app/modules/descriptors/personas/personas.component.scss
@@ -7,9 +7,9 @@
   }
   
   .example-list {
-    border: solid 1px #ccc;
     min-height: 60px;
-    background: white;
+    background: #585858;
+    color: #fff;
     border-radius: 4px;
     overflow: hidden;
     display: block;
@@ -17,15 +17,14 @@
   
   .example-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    background: #585858;
+    color: #fff;
     font-size: 14px;
   }
   
