--- a/src/app/modules/descriptors/topics/topics.component.html
+++ b/src/app/modules/descriptors/topics/topics.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mt-5">
         <div cdkDropListGroup>
             <div class="example-container">
                 <cdk-virtual-scroll-viewport itemSize="50" class="viewport">
