--- a/src/app/modules/prompt-preview/prompt-preview-text-area/prompt-preview-text-area.component.html
+++ b/src/app/modules/prompt-preview/prompt-preview-text-area/prompt-preview-text-area.component.html
@@ -4,25 +4,25 @@
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="promptPreview">
-            <mat-form-field appearance="fill" class="prompt-text">
+            <mat-form-field appearance="fill" class="prompt-text" color="accent">
                 <mat-label>Tone Prompt</mat-label>
-                <textarea matInput formControlName="tone"></textarea>
+                <textarea matInput formControlName="tone" readonly></textarea>
             </mat-form-field>
-            <mat-form-field appearance="fill" class="prompt-text">
+            <mat-form-field appearance="fill" class="prompt-text" color="accent">
                 <mat-label>Emotion Prompt</mat-label>
-                <textarea matInput formControlName="emotion"></textarea>
+                <textarea matInput formControlName="emotion" readonly></textarea>
             </mat-form-field>
-            <mat-form-field appearance="fill" class="prompt-text">
+            <mat-form-field appearance="fill" class="prompt-text" color="accent">
                 <mat-label>Persona Prompt</mat-label>
-                <textarea matInput formControlName="persona"></textarea>
+                <textarea matInput formControlName="persona" readonly></textarea>
             </mat-form-field>
-            <mat-form-field appearance="fill" class="prompt-text">
+            <mat-form-field appearance="fill" class="prompt-text" color="accent">
                 <mat-label>Genre Prompt</mat-label>
-                <textarea matInput formControlName="genre"></textarea>
+                <textarea matInput formControlName="genre" readonly></textarea>
             </mat-form-field>
-            <mat-form-field appearance="fill" class="prompt-text">
+            <mat-form-field appearance="fill" class="prompt-text" color="accent">
                 <mat-label>Topics Prompt</mat-label>
-                <textarea matInput formControlName="topic"></textarea>
+                <textarea matInput formControlName="topic" readonly></textarea>
             </mat-form-field>
         </form>
     </mat-card-content>
