reset prompt input

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="col d-flex">
   
       <div class="col-1">
-        <button mat-button (click)="navigate('dashboard')">
+        <button mat-button (click)="navigate('builder')">
             voice builder
         </button>
        </div>
