improved filtering for prompt library

--- a/src/app/modules/descriptors/descriptors-index/descriptors-index.component.html
+++ b/src/app/modules/descriptors/descriptors-index/descriptors-index.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3" *ngIf="descriptionType$ | async as type">
+<div class="row" *ngIf="descriptionType$ | async as type">
     <div class="col-2">
         <app-description-type-selector></app-description-type-selector>
     </div>
