update ui for listing selections and deselecting

--- a/src/app/modules/descriptors/descriptors-index/descriptors-index.component.html
+++ b/src/app/modules/descriptors/descriptors-index/descriptors-index.component.html
@@ -17,5 +17,5 @@
     <ng-template [ngIf]="type === TOPICS">
         <app-topics></app-topics>
     </ng-template>
-    <app-active></app-active>
+    <!-- <app-active></app-active> -->
 </div>
